improved frontend logs and updated documentation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
   </main>
 
   <footer>
-    <p>Predictive Prefetching Demo</p>
+    <p>Predictive Prefetching Demo | Built with Flask + HTTP/2</p>
   </footer>
 
   <script src="js/script.js"></script>
